--- a/static/index.html
+++ b/static/index.html
@@ -8,105 +8,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Merriweather', serif;
-      background-color: #fafafa;
-      color: #2a2a2a;
-      line-height: 1.65;
-    }
-    header {
-      text-align: center;
-      padding: 70px 20px;
-      background: white;
-      border-bottom: 1px solid #eee;
-    }
-    h1 {
-      font-family: 'Libre Baskerville', serif;
-      font-size: 2.7rem;
-      margin-bottom: 10px;
-      font-weight: 700;
-    }
-    h2 {
-      font-size: 1.4rem;
-      font-weight: 300;
-      color: #555;
-      margin-top: 0;
-    }
-    .container {
-      width: min(950px, 90%);
-      margin: 50px auto;
-    }
-    .sat-practice-container {
-      background: white;
-      padding: 40px;
-      border-radius: 8px;
-      border: 1px solid #e5e5e5;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .form-group { margin-bottom: 25px; }
-    .form-group label {
-      display: block;
-      font-weight: 600;
-      margin-bottom: 8px;
-      font-size: 1rem;
-    }
-    .form-group select {
-      width: 100%;
-      padding: 12px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-family: 'Merriweather', serif;
-      font-size: 1rem;
-    }
-    .generate-btn {
-      background: #2a2a2a;
-      color: white;
-      padding: 15px 40px;
-      border: none;
-      border-radius: 4px;
-      font-family: 'Libre Baskerville', serif;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: 0.2s;
-      width: 100%;
-    }
-    .generate-btn:hover {
-      background: #000;
-    }
-    .question-container {
-      margin-top: 30px;
-      padding: 30px;
-      background: #f9f9f9;
-      border-radius: 8px;
-      border: 1px solid #e5e5e5;
-    }
-    .question-text {
-      white-space: pre-wrap;
-      line-height: 1.8;
-    }
-    .loading {
-      text-align: center;
-      padding: 40px;
-      font-style: italic;
-      color: #666;
-    }
-    .error {
-      color: #b00020;
-      font-weight: 600;
-    }
-    #diag {
-      margin-top: 30px;
-      padding: 20px;
-      background: #111;
-      color: #0f0;
-      font-family: monospace;
-      white-space: pre-wrap;
-      border-radius: 6px;
-      font-size: 0.9rem;
-    }
+    body { margin:0; padding:0; font-family:'Merriweather',serif; background:#fafafa; color:#2a2a2a; line-height:1.65; }
+    header { text-align:center; padding:70px 20px; background:white; border-bottom:1px solid #eee; }
+    h1 { font-family:'Libre Baskerville',serif; font-size:2.7rem; margin-bottom:10px; font-weight:700; }
+    h2 { font-size:1.4rem; font-weight:300; color:#555; margin-top:0; }
+    .container { width:min(950px, 90%); margin:50px auto; }
+    .sat-practice-container { background:white; padding:40px; border-radius:8px; border:1px solid #e5e5e5; max-width:800px; margin:0 auto; }
+    .form-group { margin-bottom:25px; }
+    .form-group label { display:block; font-weight:600; margin-bottom:8px; font-size:1rem; }
+    .form-group select { width:100%; padding:12px; border:1px solid #ddd; border-radius:4px; font-family:'Merriweather',serif; font-size:1rem; }
+    .generate-btn { background:#2a2a2a; color:white; padding:15px 40px; border:none; border-radius:4px; font-family:'Libre Baskerville',serif; font-size:1.1rem; cursor:pointer; transition:.2s; width:100%; }
+    .generate-btn:hover { background:#000; }
+    .question-container { margin-top:30px; padding:30px; background:#f9f9f9; border-radius:8px; border:1px solid #e5e5e5; }
+    .question-text { white-space:pre-wrap; line-height:1.8; }
+    .loading { text-align:center; padding:40px; font-style:italic; color:#666; }
+    .error { color:#b00020; font-weight:600; }
+    #diag { margin-top:30px; padding:20px; background:#111; color:#0f0; font-family:monospace; white-space:pre-wrap; border-radius:6px; font-size:.9rem; }
   </style>
 </head>
 
@@ -156,7 +73,14 @@
 </div>
 
 <script>
-const API_BASE = "https://satpractice-coral.vercel.app";
+/**
+ * ✅ Smart API base:
+ * - On GitHub Pages: call your Vercel backend
+ * - On Vercel (coral or any deployment URL): call same-origin (/api/...)
+ */
+const API_BASE = location.hostname.endsWith("github.io")
+  ? "https://satpractice-coral.vercel.app"
+  : "";
 
 const topics = {
   "reading-writing": [
@@ -183,12 +107,15 @@ const diagDiv = document.getElementById("diag");
 sectionSelect.onchange = () => {
   topicSelect.innerHTML = "";
   if (!sectionSelect.value) return;
+
   topics[sectionSelect.value].forEach(t => {
     const o = document.createElement("option");
     o.value = t;
     o.textContent = t;
     topicSelect.appendChild(o);
   });
+
+  topicSelect.disabled = false;
   generateBtn.disabled = false;
 };
 
@@ -200,6 +127,7 @@ async function runDiagnostics() {
   const lines = [];
   lines.push(`href: ${location.href}`);
   lines.push(`origin: ${location.origin}`);
+  lines.push(`API_BASE: ${API_BASE || "(same-origin)"}`);
 
   try {
     const r = await fetch(`${API_BASE}/api/debug`, { cache: "no-store" });
@@ -227,6 +155,7 @@ async function runDiagnostics() {
 
 generateBtn.onclick = async () => {
   displayDiv.innerHTML = `<div class="loading">Generating...</div>`;
+
   try {
     const r = await fetch(`${API_BASE}/api/generate-question`, {
       method: "POST",
@@ -237,10 +166,14 @@ generateBtn.onclick = async () => {
         difficulty: difficultySelect.value
       })
     });
+
     const j = await r.json();
-    displayDiv.innerHTML = `<div class="question-container"><div class="question-text">${escapeHtml(j.text)}</div></div>`;
+    if (!r.ok) throw new Error(j.error || `Request failed (${r.status})`);
+
+    displayDiv.innerHTML =
+      `<div class="question-container"><div class="question-text">${escapeHtml(j.text)}</div></div>`;
   } catch (e) {
-    displayDiv.innerHTML = `<div class="error">${String(e)}</div>`;
+    displayDiv.innerHTML = `<div class="question-container error">${String(e)}</div>`;
   }
 };
 
