--- a/static/index.html
+++ b/static/index.html
@@ -8,22 +8,95 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
-    body { margin:0; padding:0; font-family:'Merriweather',serif; background:#fafafa; color:#2a2a2a; line-height:1.65; }
-    header { text-align:center; padding:70px 20px; background:white; border-bottom:1px solid #eee; }
-    h1 { font-family:'Libre Baskerville',serif; font-size:2.7rem; margin-bottom:10px; font-weight:700; }
-    h2 { font-size:1.4rem; font-weight:300; color:#555; margin-top:0; }
-    .container { width:min(950px, 90%); margin:50px auto; }
-    .sat-practice-container { background:white; padding:40px; border-radius:8px; border:1px solid #e5e5e5; max-width:800px; margin:0 auto; }
-    .form-group { margin-bottom:25px; }
-    .form-group label { display:block; font-weight:600; margin-bottom:8px; font-size:1rem; }
-    .form-group select { width:100%; padding:12px; border:1px solid #ddd; border-radius:4px; font-family:'Merriweather',serif; font-size:1rem; }
-    .generate-btn { background:#2a2a2a; color:white; padding:15px 40px; border:none; border-radius:4px; font-family:'Libre Baskerville',serif; font-size:1.1rem; cursor:pointer; transition:.2s; width:100%; }
-    .generate-btn:hover { background:#000; transform: translateY(-1px); }
-    .generate-btn:disabled { background:#ccc; cursor:not-allowed; transform:none; }
-    .question-container { margin-top:30px; padding:30px; background:#f9f9f9; border-radius:8px; border:1px solid #e5e5e5; }
-    .question-text { white-space:pre-wrap; line-height:1.8; font-size:1.05rem; }
-    .loading { text-align:center; padding:40px; font-style:italic; color:#666; }
-    .error { color:#b00020; font-weight:600; }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Merriweather', serif;
+      background-color: #fafafa;
+      color: #2a2a2a;
+      line-height: 1.65;
+    }
+    header {
+      text-align: center;
+      padding: 70px 20px;
+      background: white;
+      border-bottom: 1px solid #eee;
+    }
+    h1 {
+      font-family: 'Libre Baskerville', serif;
+      font-size: 2.7rem;
+      margin-bottom: 10px;
+      font-weight: 700;
+    }
+    h2 {
+      font-size: 1.4rem;
+      font-weight: 300;
+      color: #555;
+      margin-top: 0;
+    }
+    .container {
+      width: min(950px, 90%);
+      margin: 50px auto;
+    }
+    .sat-practice-container {
+      background: white;
+      padding: 40px;
+      border-radius: 8px;
+      border: 1px solid #e5e5e5;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .form-group { margin-bottom: 25px; }
+    .form-group label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 8px;
+      font-size: 1rem;
+    }
+    .form-group select {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-family: 'Merriweather', serif;
+      font-size: 1rem;
+    }
+    .generate-btn {
+      background: #2a2a2a;
+      color: white;
+      padding: 15px 40px;
+      border: none;
+      border-radius: 4px;
+      font-family: 'Libre Baskerville', serif;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: 0.2s;
+      width: 100%;
+    }
+    .generate-btn:hover { background: #000; }
+    .generate-btn:disabled { background: #ccc; cursor: not-allowed; }
+    .question-container {
+      margin-top: 30px;
+      padding: 30px;
+      background: #f9f9f9;
+      border-radius: 8px;
+      border: 1px solid #e5e5e5;
+    }
+    .question-text {
+      white-space: pre-wrap;
+      line-height: 1.8;
+      font-size: 1.05rem;
+    }
+    .loading {
+      text-align: center;
+      padding: 40px;
+      font-style: italic;
+      color: #666;
+    }
+    .error {
+      color: #b00020;
+      font-weight: 600;
+    }
   </style>
 </head>
 
@@ -70,13 +143,11 @@
 
 <script>
 /**
- * Smart API base:
- * - On GitHub Pages -> call Vercel backend
- * - On Vercel -> call same-origin (/api/...)
+ * ✅ API_ORIGIN logic (as requested)
  */
-const API_BASE = location.hostname.endsWith("github.io")
+const API_ORIGIN = location.hostname.endsWith("github.io")
   ? "https://satpractice-coral.vercel.app"
-  : "";
+  : location.origin;
 
 const topics = {
   "reading-writing": [
@@ -139,30 +210,28 @@ generateBtn.onclick = async () => {
   displayDiv.innerHTML = `<div class="loading">Generating...</div>`;
 
   try {
-    const resp = await fetch(`${API_BASE}/api/generate-question`, {
+    const resp = await fetch(`${API_ORIGIN}/api/generate-question`, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      cache: "no-store",
       body: JSON.stringify({
-        section: sectionSelect.value === "reading-writing" ? "Reading and Writing" : "Math",
+        section: sectionSelect.value === "reading-writing"
+          ? "Reading and Writing"
+          : "Math",
         topic: topicSelect.value,
         difficulty: difficultySelect.value
       })
     });
 
-    const contentType = resp.headers.get("content-type") || "";
-    const data = contentType.includes("application/json")
-      ? await resp.json()
-      : { error: await resp.text() };
-
-    if (!resp.ok) throw new Error(data.error || `Request failed (${resp.status})`);
+    const data = await resp.json();
+    if (!resp.ok) throw new Error(data.error || "Request failed");
 
     const fullText = data.text || "";
 
-    // Split question from answer/explanation
     const splitIndex = fullText.indexOf("Correct Answer");
-    const questionPart = splitIndex !== -1 ? fullText.slice(0, splitIndex).trim() : fullText.trim();
-    const answerPart = splitIndex !== -1 ? fullText.slice(splitIndex).trim() : "";
+    const questionPart =
+      splitIndex !== -1 ? fullText.slice(0, splitIndex).trim() : fullText.trim();
+    const answerPart =
+      splitIndex !== -1 ? fullText.slice(splitIndex).trim() : "";
 
     displayDiv.innerHTML = `
       <div class="question-container">
@@ -174,7 +243,9 @@ generateBtn.onclick = async () => {
 
         <div id="answer-section" style="display:none; margin-top:20px;">
           <hr />
-          <div class="question-text">${escapeHtml(answerPart || "No answer/explanation found in output.")}</div>
+          <div class="question-text">
+            ${escapeHtml(answerPart || "No answer/explanation found.")}
+          </div>
         </div>
       </div>
     `;
